# NeuroLens

./: .gitignore  Dockerfile.backend  Dockerfile.backend.dockerignore  Dockerfile.frontend  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  start.bat
backend/: .env.example  download_model.py  generate_sample_data.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/routes/: analyze.py  reports.py
backend/app/services/: brats_loader.py  dicom_loader.py  doctor_finder.py  evaluator.py  explainer.py  mesh_builder.py  metrics.py  pdf_generator.py  postprocessor.py  sample_data.py  segmentor.py  slice_server.py  surgery_recommender.py  volume_ops.py
backend/models/__MACOSX/trial_4attention_unet_3d/: ._saved_model.pb
backend/models/trial_4attention_unet_3d/variables/: variables.index
backend/sample_data/: mask.npy
frontend/: .env.example  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  AppContext.jsx  styles.css
frontend/src/components/: Navbar.jsx  PatientReport.jsx  SliceViewer.jsx  ValidationModal.jsx  Viewer.jsx
frontend/src/features/: AnatomyExplorer.jsx  ClinicalChat.jsx  MRIViewer.jsx  RiskEstimator.jsx  SessionContext.jsx  SessionDashboard.jsx
frontend/src/pages/: DoctorDashboard.jsx  LandingPage.jsx  PatientDashboard.jsx
