[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "monai>=1.5.2",
    "nibabel>=5.4.2",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pydicom>=3.0.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "trimesh>=4.11.5",
    "uvicorn[standard]>=0.44.0",
]
